force-app/main/default/objects/Question_Bank__c/Question_Bank__c.object-meta.xml
<CustomObject>
    <description>A versioned set of trivia questions for an exam.</description>
    <label>Question Bank</label>
    <nameField>
        <label>Question Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>