force-app/main/default/objects/Question_Bank__c/fields/Certification_Exam__c.field-meta.xml
<CustomField>
    <fullName>Certification_Exam__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Certification Exam</label>
    <referenceTo>Certification_Exam__c</referenceTo>
    <relationshipLabel>Certification Exam</relationshipLabel>
    <relationshipName>Question_Banks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>