force-app/main/default/objects/Question_Bank__c/fields/Created_From_File__c.field-meta.xml
<CustomField>
    <fullName>Created_From_File__c</fullName>
    <label>Created From File</label>
    <type>Text</type>
    <length>255</length>
</CustomField>