force-app/main/default/objects/Question_Bank__c/fields/Generated_By_Model__c.field-meta.xml
<CustomField>
    <fullName>Generated_By_Model__c</fullName>
    <label>Generated By Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>