force-app/main/default/objects/Question_Bank__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <label>Premium</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>