force-app/main/default/objects/Question_Bank__c/fields/Prompt_Version__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Version__c</fullName>
    <label>Prompt Version</label>
    <type>Text</type>
    <length>40</length>
</CustomField>