force-app/main/default/objects/Question_Bank__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Text</type>
    <length>20</length>
    <length>20</length>
</CustomField>